--- a/examples/bio_technique.ipynb
+++ b/examples/bio_technique.ipynb
@@ -472,7 +472,7 @@
     "    n_classes\n",
     ")\n",
     "\n",
-    "history = trainer.compile(\n",
+    "history = trainer.train(\n",
     "    train_dataloader, \n",
     "    validation_dataloader,\n",
     "    n_epochs = 100\n",
